the-whole-page copy.html: <put all the content in the div.content <removed the fixed position of the sidebar and the margin-left of the tabs <put them to flexbox layout <changed all the property highlighted in attrhigh to p-high <added summary to the color tab <added lines to the background tab <added all the tabs to a div container The-whole-page.html: <added lines to the background tab The-whole-page.css: <added font-size of headers based on font-size of body <added the result container block.svg, frame.svg, layout.svg: changed the style of the code the-whole-page-style copy.css: <added the --background variable <added --theme-darker-css to the body.dark <added a margin on .note <removed position:fixed on .tablinks <added flex: 0 0 var(--sideBarWidth) on .tablinks <added .content as the container of all the content of the page <added .content > * with overflow:auto <added color property to the div#csstab > .block <added .p-high to the selector of .property <shortened the code of .p-value <added .p-high selector <changed the property value of background-color to var(--background) in .result <added the property color:var(--color) to .result gradient bg.png: <added to the .git

--- a/The-whole-page-style copy.css
+++ b/The-whole-page-style copy.css
@@ -23,6 +23,7 @@ body:not(body.dark):not(body.matrix) {
     --css-id:rgb(87, 133, 0);
     --css-property: rgb(93, 0, 136);
     --css-property-value: rgb(0, 238, 255);
+    --background:white;
 }
 :root {
     --plain:white;
@@ -45,6 +46,7 @@ body.dark, body.matrix {
     --theme-dark-html:#a83500;
     --theme-darker-html:#941300;
     --theme-dark-css:#002688;
+    --theme-darker-css:#002d96;
     --theme-js:yellow;
     --theme-dark-js:#aa0;
     --sideBarWidth:200px;
@@ -61,6 +63,7 @@ body.dark, body.matrix {
     --css-id:rgb(166, 255, 0);
     --css-property: rgb(174, 0, 255);
     --css-property-value: rgb(162, 255, 119);
+    --background:black;
 }
 body.matrix {
     color:#0f0;
@@ -77,7 +80,7 @@ body.dark, body.dark .code{
 html, body {margin:0;padding:0;height:100%;}
 html, body, body * {transition:background-color var(--miliseconds), color var(--miliseconds);}
 *:not(pre) {font-family: "Open sans", sans-serif;box-sizing:border-box;}
-.note {border:1px solid var(--color);padding:5px 3px;box-shadow: 2px 2px 4px 0 var(--note-shadow);}
+.note {border:1px solid var(--color);padding:5px 3px;box-shadow: 2px 2px 4px 0 var(--note-shadow);margin:10px 0;}
 
 /*hover of the child of tablinks class.tablinks > *:hover, .block {
     border:1px solid transparent;
@@ -104,7 +107,6 @@ html, body, body * {transition:background-color var(--miliseconds), color var(--
     padding-bottom:2em;
 }
 .tabs {
-    margin-left:var(--sideBarWidth);
     padding:0 10px;
 }
 .tabcontent > h1:first-child {
@@ -113,13 +115,14 @@ html, body, body * {transition:background-color var(--miliseconds), color var(--
 
 /* The side bar of the website*/
 .tablinks {
-    position:fixed;
-    left:0;
     width:var(--sideBarWidth);
     height:var(--full);
     box-shadow:1px 0 10px 1px #acacac;
     overflow:auto;
+    flex:0 0 var(--sideBarWidth);
 }
+.content {display:flex;width:var(--full);height:var(--full);}
+.content > * {overflow:auto;}
 .tablinks::-webkit-scrollbar {width:10px;}
 .tablinks::-webkit-scrollbar-track {background:#ddd;border-radius:2px;}
 .tablinks::-webkit-scrollbar-thumb {background:#aaa;}
@@ -172,6 +175,7 @@ div#htmltab > .block {
 }
 div#csstab > .block {
     background-color:var(--theme-darker-css);
+    color:var(--color);
 }
 .link > svg, .link > img {
     width:1.2em;
@@ -209,12 +213,11 @@ body:not(body.dark, body.matrix) .tabcontent  .code {background:white;}
 .id {
     color:var(--css-id);
 }
-.property {
+.property, .p-high {
     color:var(--css-property);
 }
-.p-value {
-    color:var(--css-property-value);
-}
+.p-value {color:var(--css-property-value);}
+.p-high {text-shadow:0 0 2px var(--css-property);}
 .codeline.second-level {
     padding-left:calc(1em * 2);
 }
@@ -284,5 +287,6 @@ svg g > path:nth-child(1) {
 }
 .result {
     padding:3px;
-    background-color:white;
+    background-color:var(--background);
+    color:var(--color);
 }
