--- a/The-whole-page-style.css
+++ b/The-whole-page-style.css
@@ -29,9 +29,16 @@ body:not(body.dark):not(body.matrix) {
     --matrix:#0f0;
     --dark:#000;
     --miliseconds:0.3s;
-    --note-shadow:#6200ff;  
+    --note-shadow:#6200ff; 
+    font-size:15px; 
 }
-
+h1 {font-size:calc(1em * 2.5);}
+h2 {font-size:calc(1em * 2);}
+h3 {font-size:calc(1em * 1.6);}
+h4 {font-size:calc(1em * 1.3);}
+h5 {font-size:calc(1em * 1.1);}
+h6 {font-size:calc(1em);}
+h1, h2, h3, h4, h5, h6 {margin:10px 0;}
 body.dark, body.matrix {
     --theme-blue:#004cff;
     --theme-html:#da5700;
@@ -268,4 +275,8 @@ svg g > path:nth-child(4) {
 }
 svg g > path:nth-child(1) {
     fill:var(--theme-blue);
+}
+.result {
+    padding:3px;
+    background-color:white;
 }
